Things are working async now

--- a/test.ipynb
+++ b/test.ipynb
@@ -333,6 +333,75 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m13:01:45.265\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36msentientresearchagent.hierarchical_agent_framework.agents.definitions.atomizer_agents\u001b[0m:\u001b[36m<module>\u001b[0m:\u001b[36m150\u001b[0m - \u001b[1mSuccessfully initialized DefaultAtomizer_Agno with model openrouter/anthropic/claude-3-7-sonnet\u001b[0m\n",
+      "\u001b[32m13:01:45.290\u001b[0m | \u001b[33m\u001b[1mWARNING \u001b[0m | \u001b[36msentientresearchagent.hierarchical_agent_framework.agents.definitions.custom_searchers\u001b[0m:\u001b[36m<module>\u001b[0m:\u001b[36m13\u001b[0m - \u001b[33m\u001b[1mWarning: google.genai module not found. GeminiSearcherWrapper will not be usable.\u001b[0m\n",
+      "\u001b[32m13:01:45.291\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36msentientresearchagent.hierarchical_agent_framework.agents\u001b[0m:\u001b[36m<module>\u001b[0m:\u001b[36m26\u001b[0m - \u001b[1mExecuting agents/__init__.py: Setting up and registering agents...\u001b[0m\n",
+      "\u001b[32m13:01:45.292\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36msentientresearchagent.hierarchical_agent_framework.agents\u001b[0m:\u001b[36m<module>\u001b[0m:\u001b[36m100\u001b[0m - \u001b[1mDEBUG: Value of search_synthesizer_agno_agent before registration: Agent(model=LiteLLM(id='openrouter/anthropic/claude-3-7-sonnet', name='LiteLLM', provider='LiteLLM', response_format=None, structured_outputs=False, supports_native_structured_outputs=False, supports_json_schema_outputs=False, tool_choice=None, show_tool_calls=None, tool_call_limit=None, _tools=None, _functions=None, _function_call_stack=None, system_prompt=None, instructions=None, tool_message_role='tool', assistant_message_role='assistant', api_key=None, api_base=None, max_tokens=None, temperature=0.7, top_p=1.0, request_params=None, client=None), name='SearchSynthesizer_Agno', agent_id=None, introduction=None, user_id=None, session_id=None, session_name=None, session_state=None, context=None, add_context=False, resolve_context=True, memory=None, enable_agentic_memory=False, enable_user_memories=False, add_memory_references=None, enable_session_summaries=False, add_session_summary_references=None, add_history_to_messages=False, num_history_responses=None, num_history_runs=3, knowledge=None, knowledge_filters=None, enable_agentic_knowledge_filters=None, add_references=False, retriever=None, references_format='json', storage=None, extra_data=None, tools=None, show_tool_calls=True, tool_call_limit=None, tool_choice=None, tool_hooks=None, reasoning=False, reasoning_model=None, reasoning_agent=None, reasoning_min_steps=1, reasoning_max_steps=10, read_chat_history=False, search_knowledge=True, update_knowledge=False, read_tool_call_history=False, system_message=\"You are a search results synthesizer. You will be given a 'Research Goal' and 'Raw Search Results' (as context, typically from a 'SearchExecutor' agent in WebSearchResultsOutput format).\\nYour primary task is to carefully review all provided search result snippets and generate a concise, coherent text summary of the information that is most relevant to the original 'Research Goal'.\\nExtract key facts, figures, and insights. The summary should be in well-formatted markdown.\\nOutput *only* this markdown summary. Do not include any preambles or conversational text.\\n\", system_message_role='system', create_default_system_message=True, description=None, goal=None, instructions=None, expected_output=None, additional_context=None, markdown=False, add_name_to_instructions=False, add_datetime_to_instructions=False, timezone_identifier=None, add_state_in_messages=False, add_messages=None, user_message=None, user_message_role='user', create_default_user_message=True, retries=0, delay_between_retries=1, exponential_backoff=False, response_model=None, parse_response=True, structured_outputs=None, use_json_mode=False, save_response_to_file=None, stream=None, stream_intermediate_steps=False, team=None, team_data=None, role=None, respond_directly=False, add_transfer_instructions=True, team_response_separator='\\n', team_session_id=None, team_id=None, team_session_state=None, debug_mode=False, monitoring=False, telemetry=True)\u001b[0m\n",
+      "\u001b[32m13:01:45.292\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36msentientresearchagent.hierarchical_agent_framework.agents\u001b[0m:\u001b[36m<module>\u001b[0m:\u001b[36m165\u001b[0m - \u001b[1mRegistered adapter: DefaultAtomizer for atomization\u001b[0m\n",
+      "\u001b[32m13:01:45.292\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36msentientresearchagent.hierarchical_agent_framework.agents\u001b[0m:\u001b[36m<module>\u001b[0m:\u001b[36m171\u001b[0m - \u001b[1mDEBUG: Value of default_aggregator_agno_agent before registration: Agent(model=LiteLLM(id='openrouter/anthropic/claude-3-7-sonnet', name='LiteLLM', provider='LiteLLM', response_format=None, structured_outputs=False, supports_native_structured_outputs=False, supports_json_schema_outputs=False, tool_choice=None, show_tool_calls=None, tool_call_limit=None, _tools=None, _functions=None, _function_call_stack=None, system_prompt=None, instructions=None, tool_message_role='tool', assistant_message_role='assistant', api_key=None, api_base=None, max_tokens=None, temperature=0.7, top_p=1.0, request_params=None, client=None), name='DefaultAggregator_Agno', agent_id=None, introduction=None, user_id=None, session_id=None, session_name=None, session_state=None, context=None, add_context=False, resolve_context=True, memory=None, enable_agentic_memory=False, enable_user_memories=False, add_memory_references=None, enable_session_summaries=False, add_session_summary_references=None, add_history_to_messages=False, num_history_responses=None, num_history_runs=3, knowledge=None, knowledge_filters=None, enable_agentic_knowledge_filters=None, add_references=False, retriever=None, references_format='json', storage=None, extra_data=None, tools=None, show_tool_calls=True, tool_call_limit=None, tool_choice=None, tool_hooks=None, reasoning=False, reasoning_model=None, reasoning_agent=None, reasoning_min_steps=1, reasoning_max_steps=10, read_chat_history=False, search_knowledge=True, update_knowledge=False, read_tool_call_history=False, system_message='You are an expert report compiler and editor.\\nYou will be provided with a \\'Parent Task Goal\\' (e.g., \"Write a comprehensive report on X\") and \\'Context from Child Tasks\\'.\\nThe context will contain multiple detailed sections, each potentially fulfilling a sub-goal of the Parent Task Goal. These sections are likely already well-written and may include markdown formatting and citations (e.g., [Source](URL)).\\n\\nYour primary task is to:\\n1.  Carefully review all provided child task outputs (report sections).\\n2.  Assemble these sections into a single, coherent, and comprehensive final report that directly and fully addresses the \\'Parent Task Goal\\'.\\n3.  Ensure a logical flow between sections. You may need to write short transitional sentences or phrases if appropriate, but primarily focus on integrating the provided sections.\\n4.  Preserve the detail, formatting (especially markdown headings, lists, etc.), and all citations from the original sections. Do NOT summarize the content of the sections unless the Parent Task Goal explicitly implies a very high-level summary of many detailed parts.\\n5.  If there\\'s only one child task output and it comprehensively addresses the Parent Task Goal, you can present that as the final answer.\\n6.  The final output should be clean, well-structured in markdown, and directly usable as a full report section or complete report.\\n7.  Do not add conversational fluff or preambles like \"Here is the compiled report:\". Only output the final compiled answer.\\n', system_message_role='system', create_default_system_message=True, description=None, goal=None, instructions=None, expected_output=None, additional_context=None, markdown=False, add_name_to_instructions=False, add_datetime_to_instructions=False, timezone_identifier=None, add_state_in_messages=False, add_messages=None, user_message=None, user_message_role='user', create_default_user_message=True, retries=0, delay_between_retries=1, exponential_backoff=False, response_model=None, parse_response=True, structured_outputs=None, use_json_mode=False, save_response_to_file=None, stream=None, stream_intermediate_steps=False, team=None, team_data=None, role=None, respond_directly=False, add_transfer_instructions=True, team_response_separator='\\n', team_session_id=None, team_id=None, team_session_state=None, debug_mode=False, monitoring=False, telemetry=True)\u001b[0m\n",
+      "\u001b[32m13:01:45.292\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36msentientresearchagent.hierarchical_agent_framework.agents\u001b[0m:\u001b[36m<module>\u001b[0m:\u001b[36m191\u001b[0m - \u001b[1mRegistered adapter: DefaultAggregator for aggregation\u001b[0m\n",
+      "\u001b[32m13:01:45.297\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36msentientresearchagent.hierarchical_agent_framework.agents.definitions.custom_searchers\u001b[0m:\u001b[36m__init__\u001b[0m:\u001b[36m133\u001b[0m - \u001b[1mInitialized OpenAICustomSearchAdapter with model: gpt-4.1 (Async Client: True)\u001b[0m\n",
+      "\u001b[32m13:01:45.297\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36msentientresearchagent.hierarchical_agent_framework.agents\u001b[0m:\u001b[36m<module>\u001b[0m:\u001b[36m209\u001b[0m - \u001b[1mRegistered direct adapter: OpenAICustomSearchAdapter as 'OpenAICustomSearcher' AND for ('execute', SEARCH)\u001b[0m\n",
+      "\u001b[32m13:01:45.298\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36msentientresearchagent.hierarchical_agent_framework.agents\u001b[0m:\u001b[36m<module>\u001b[0m:\u001b[36m216\u001b[0m - \u001b[1mAGENT_REGISTRY populated: 8 entries.\u001b[0m\n",
+      "\u001b[32m13:01:45.298\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36msentientresearchagent.hierarchical_agent_framework.agents\u001b[0m:\u001b[36m<module>\u001b[0m:\u001b[36m217\u001b[0m - \u001b[1mNAMED_AGENTS populated: 9 entries.\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AgentRegistry: Registered adapter 'PlannerAdapter' for action 'plan', task_type 'WRITE'\n",
+      "AgentRegistry: Registered adapter 'PlannerAdapter' for action 'plan', task_type 'THINK'\n",
+      "AgentRegistry: Registered adapter 'PlannerAdapter' for action 'plan', task_type 'SEARCH'\n",
+      "AgentRegistry: Registered adapter 'PlannerAdapter' with name 'default_planner'\n",
+      "AgentRegistry: Registered adapter 'PlannerAdapter' with name 'SimpleTestPlanner'\n",
+      "AgentRegistry: Registered adapter 'PlannerAdapter' with name 'CoreResearchPlanner'\n",
+      "AgentRegistry: Registered adapter 'ExecutorAdapter' with name 'SearchExecutor'\n",
+      "AgentRegistry: Registered adapter 'ExecutorAdapter' with name 'SearchSynthesizer'\n",
+      "AgentRegistry: Registered adapter 'ExecutorAdapter' for action 'execute', task_type 'THINK'\n",
+      "AgentRegistry: Registered adapter 'ExecutorAdapter' with name 'BasicReportWriter'\n",
+      "AgentRegistry: Registered adapter 'ExecutorAdapter' for action 'execute', task_type 'WRITE'\n",
+      "AgentRegistry: Registered adapter 'AtomizerAdapter' for action 'atomize', task_type 'None'\n",
+      "AgentRegistry: Registered adapter 'AtomizerAdapter' with name 'default_atomizer'\n",
+      "AgentRegistry: Registered adapter 'AggregatorAdapter' for action 'aggregate', task_type 'None'\n",
+      "AgentRegistry: Registered adapter 'AggregatorAdapter' with name 'default_aggregator'\n",
+      "AgentRegistry: Registered adapter 'OpenAICustomSearchAdapter' with name 'OpenAICustomSearcher'\n",
+      "AgentRegistry: Registered adapter 'OpenAICustomSearchAdapter' for action 'execute', task_type 'SEARCH'\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sentientresearchagent.hierarchical_agent_framework.agents.definitions.planner_agents import core_research_planner_agno_agent\n",
+    "\n",
+    "final_output = await core_research_planner_agno_agent.arun(\"Who built the pyramids?\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sub_tasks=[SubTask(goal='Research the historical consensus on who built the Egyptian pyramids (workers, skilled laborers, farmers during off-seasons, etc.)', task_type='SEARCH', node_type='EXECUTE'), SubTask(goal='Investigate the evidence debunking common misconceptions about slave labor and pyramid construction', task_type='SEARCH', node_type='EXECUTE'), SubTask(goal='Research the organizational structure, leadership, and management of pyramid construction projects in ancient Egypt', task_type='SEARCH', node_type='EXECUTE'), SubTask(goal='Find information about the living conditions, compensation, and social status of pyramid builders based on archaeological evidence', task_type='SEARCH', node_type='EXECUTE'), SubTask(goal='Synthesize research findings to create a comprehensive answer about who built the pyramids, addressing both historical facts and common misconceptions', task_type='WRITE', node_type='EXECUTE')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(final_output.content)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
